--- a/index.html
+++ b/index.html
@@ -10,49 +10,49 @@
     <div class="header">
         Header Logo
         <ul class="head-links">
-            <li>header link one</li>
-            <li>header link two</li>
-            <li>header link three</li>
+            <li><a target="_blank" href="https://yugipedia.com/wiki/Duel_Academy">About Us</a></li>
+            <li><a target="_blank" href="https://yugipedia.com/wiki/Duel_Academy#Staff">Our Staff</a></li>
+            <li><a target="_blank" href="https://yugipedia.com/wiki/Duel_Academy_(New_Domino)">Duel Academy New Domino City</a></li>
         </ul>
     </div>
     <div class="content">
         <div class="hero">
-            <div>This website is awesome</div>
-            <div class="subtext">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast.</div>
-            <button>sign up</button>
+            <div>Your New Life Awaits - Come Duel With the Best!</div>
+            <div class="subtext">The prestigious Central Duel Academy will open its doors to registration next month. Get ready to make this dueling island paradise your new home!</div>
+            <button>Join out mailing list</button>
             <img alt="this is a placeholder for an image" src="./duel-academy.webp">
         </div>
         <div class="info">
-            <div class="head">We have four different houses to match your dueling ability!</div>
-            <div class="image">
-            <img alt="the uniform of one of the houses." src="./slifer-red-uniform.webp">
-            Slifer Red.
-            </div>
-            <div class="image">
-            <img alt="the uniform of one of the houses." src="./slifer-red-uniform.webp">
-            Slifer Red.
-            </div>
-            <div class="image">
-            <img alt="the uniform of one of the houses." src="./slifer-red-uniform.webp">
-            Slifer Red.
-            </div>
-            <div class="image">
-            <img alt="the uniform of one of the houses." src="./slifer-red-uniform.webp">
-            Slifer Red.
-            </div>
+            <div class="head">We have four different houses to match your dueling ability:</div>
+            <a href="https://yugipedia.com/wiki/Slifer_Red" target="_blank">
+            <img alt="the uniform of one of the houses." src="./slifer-red-uniform.png">
+            Slifer Red - the bright sparks that light up our campus.
+            </a>
+            <a href="https://yugipedia.com/wiki/Ra_Yellow" target="_blank">
+            <img alt="the uniform of one of the houses." src="./ra-yellow-uniform.png"> 
+            Ra Yellow - where only the studious survive.
+            </a>
+            <a href="https://yugipedia.com/wiki/Obelisk_Blue" target="_blank">
+            <img alt="the uniform of one of the houses." src="./obelisk-blue-uniform.png">
+            Obelisk Blue - come live the life of luxury!
+            </a>
+            <a href="https://en.wikipedia.org/wiki/Cult" target="_blank">
+            <img alt="the uniform of one of the houses." src="./obelisk-white-uniform.webp">
+            Obelisk White - for only the most devoted duelists.
+            </a>
         </div>
         <div class="quote">
-            <div class="quote">This is an inspiring quote, perhaps from the chancellor or from someone else. You can achieve your dreams if you're born in the right place!</div>
-            <div class="quoter">-Some Smart Person, probably</div>
+            <div class="quote">It takes discipline to win. You need to have a sense of duty. You need to have some kind of plan!</div>
+            <div class="quoter">-Chazz Princeton, alumn 2005</div>
         </div>
         <div class="call">
-            <div class="main">Call to action! It's time!</div>
-            <div class="subtext">Sign up for Duel Academy now! You're statistically likely to survive until graduation!</div>
-            <button>Sign Up</button>
+            <div class="main">Registration is opening very soon - it's almost time to duel!</div>
+            <div class="subtext">Sign up for our mailing list so you can be notified as soon as registration opens! You're statistically likely to survive until graduation!</div>
+            <button>Join our mailing list</button>
         </div>
     </div>
     <div class="footer">
-        Copyright © Chairman Whats'isname
+        Central Duel Academy and all affiliate D.A. schools are protected under copyright © Kaibacorp, 1974.
     </div>
 </body>
 </html>
