format dorms section
I didn't use flexbox to format this section,
I gotta go back and do that.

--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Duel Academy Home</title>
+    <title>Duel Academy - Home</title>
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
     <div class="header">
-        Header Logo
+        <div class="logo"   >Central Duel Academy</div>
         <ul class="head-links">
             <li><a target="_blank" href="https://yugipedia.com/wiki/Duel_Academy">About Us</a></li>
             <li><a target="_blank" href="https://yugipedia.com/wiki/Duel_Academy#Staff">Our Staff</a></li>
@@ -17,29 +17,33 @@
     </div>
     <div class="content">
         <div class="hero">
-            <div>Your New Life Awaits - Come Duel With the Best!</div>
-            <div class="subtext">The prestigious Central Duel Academy will open its doors to registration next month. Get ready to make this dueling island paradise your new home!</div>
-            <button>Join out mailing list</button>
+            <div class="hero-l">
+                <div class="hero-head">Your New Life Awaits - Come Duel With the Best!</div>
+                <div class="subtext">The prestigious Central Duel Academy will open its doors to new students next month. Get ready to make this island dueling paradise your new home!</div>
+                <button>Sign Up</button>
+            </div>
             <img alt="this is a placeholder for an image" src="./duel-academy.webp">
         </div>
         <div class="info">
-            <div class="head">We have four different houses to match your dueling ability:</div>
-            <a href="https://yugipedia.com/wiki/Slifer_Red" target="_blank">
-            <img alt="the uniform of one of the houses." src="./slifer-red-uniform.png">
-            Slifer Red - the bright sparks that light up our campus.
-            </a>
-            <a href="https://yugipedia.com/wiki/Ra_Yellow" target="_blank">
-            <img alt="the uniform of one of the houses." src="./ra-yellow-uniform.png"> 
-            Ra Yellow - where only the studious survive.
-            </a>
-            <a href="https://yugipedia.com/wiki/Obelisk_Blue" target="_blank">
-            <img alt="the uniform of one of the houses." src="./obelisk-blue-uniform.png">
-            Obelisk Blue - come live the life of luxury!
-            </a>
-            <a href="https://en.wikipedia.org/wiki/Cult" target="_blank">
-            <img alt="the uniform of one of the houses." src="./obelisk-white-uniform.webp">
-            Obelisk White - for only the most devoted duelists.
-            </a>
+            <div class="head">We have four different dorms to match your dueling ability:</div>
+            <div class="dorms">
+                <a class="dorm" href="https://yugipedia.com/wiki/Slifer_Red" target="_blank">
+                    <img alt="the uniform of one of the houses." src="./slifer-red-uniform.png">
+                    <div>Slifer Red - the bright sparks that light up our campus.</div>
+                </a>
+                <a class="dorm" href="https://yugipedia.com/wiki/Ra_Yellow" target="_blank">
+                    <img alt="the uniform of one of the houses." src="./ra-yellow-uniform.png"> 
+                    <div>Ra Yellow - where only the studious survive.</div>
+                </a>
+                <a class="dorm" href="https://yugipedia.com/wiki/Obelisk_Blue" target="_blank">
+                    <img alt="the uniform of one of the houses." src="./obelisk-blue-uniform.png">
+                    <div>Obelisk Blue - come live the life of luxury!</div>
+                </a>
+                <a class="dorm" href="https://en.wikipedia.org/wiki/Cult" target="_blank">
+                    <img alt="the uniform of one of the houses." src="./obelisk-white-uniform.webp">
+                    <div>Obelisk White - for only the most devoted duelists.</div>
+                </a>
+            </div>
         </div>
         <div class="quote">
             <div class="quote">It takes discipline to win. You need to have a sense of duty. You need to have some kind of plan!</div>
