--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                 </a>
             </div>
         </div>
-        <div class="quote">
+        <div class="quote-sect"> 
             <div class="quote">It takes discipline to win. You need to have a sense of duty. You need to have some kind of plan!</div>
             <div class="quoter">-Chazz Princeton, alumn 2005</div>
         </div>
