finish call to action
Also added some more TODOs to README.md

--- a/index.html
+++ b/index.html
@@ -50,9 +50,11 @@
             <div class="quoter">-Chazz Princeton, alumn 2005</div>
         </div>
         <div class="call">
-            <div class="main">Registration is opening very soon - it's almost time to duel!</div>
-            <div class="subtext">Sign up for our mailing list so you can be notified as soon as registration opens! You're statistically likely to survive until graduation!</div>
-            <button>Join our mailing list</button>
+            <section class="text">
+                <div class="main">Registration opens very soon - it's almost time to duel!</div>
+                <div class="subtext">Sign up for our mailing list so you can be notified as soon as registration opens!<br>You're statistically likely to survive until graduation!</div>
+            </section>
+            <button>Sign Up</button>
         </div>
     </div>
     <div class="footer">
