finish formatting website
There are still some small things to be tweaked, see README.md

--- a/index.html
+++ b/index.html
@@ -57,8 +57,6 @@
             <button>Sign Up</button>
         </div>
     </div>
-    <div class="footer">
-        Central Duel Academy and all affiliate D.A. schools are protected under copyright © Kaibacorp, 1974.
-    </div>
+    <div class="footer">Central Duel Academy and all affiliate D.A. schools are protected under copyright © Kaibacorp, 1974.</div>
 </body>
 </html>
